--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Restful气象数据共享平台</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -31,61 +31,51 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
-<script src="bower_components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
-<link href="bower_components/angular-bootstrap-nav-tree/dist/abn_tree.css" rel="stylesheet">
+<script src="components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
+<link href="components/angular-bootstrap-nav-tree/dist/abn_tree.css" rel="stylesheet">
 </head>
 <body ng-controller="AbnTestController">
-<!--
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-  
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
--->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Project name</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
+  <!-- fixed nav -->
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">气象数据共享平台</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Settings</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="container-fluid mq-full-height">
-  <div class="row mq-full-height">
-    <div class="col-md-3 sidebar mq-full-height">
-      <abn-tree tree-data="my_data" expand-level="2"></abn-tree>
-      <div>&nbsp;</div>
-    </div>
-
-    <div class="col-md-9 main">
-      <p >Dashboard</p>
-      <p>hello</p>
-
-
+  <div class="container-fluid mq-full-height">
+    <div class="row mq-full-height">
+      <!-- tree item -->
+      <div class="col-md-3 sidebar mq-full-height">
+        <abn-tree tree-data="my_data" expand-level="1"></abn-tree>
+        <div>&nbsp;</div>
+      </div>
+      <!--main content -->
+      <div class="col-md-9 main">
+        <p >Dashboard</p>
+        <p>hello</p>
 
 
+
+
+      </div>
     </div>
   </div>
-</div>
 
 </body>
 </html>
