--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
   <div class="container-fluid mq-full-height">
     <div class="row mq-full-height">
-      <!-- tree item -->
+      <!-- left bar tree item -->
       <div class="col-md-3 sidebar mq-full-height">
         <abn-tree tree-data="my_data" expand-level="1"></abn-tree>
         <div>&nbsp;</div>
