--- a/app/index.html
+++ b/app/index.html
@@ -2,108 +2,169 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="zh-cn" ng-app="restUI" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="zh-cn" ng-app="restUI" class="no-js">
+<!--<![endif]-->
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Restful气象数据共享平台</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" href="css/app.css"/>
-  <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-  <!-- In production use:
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Restful气象数据共享平台</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
+    <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+    <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
-<script src="js/app.js"></script>
-<script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/filters.js"></script>
-<script src="js/directives.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/directives.js"></script>
 
-<!-- angular-bootstrap-->
-<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-<!-- angular-ui-codemirror-->
-<script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
-<script src="bower_components/codemirror/lib/codemirror.js"></script>
-<link href="bower_components/codemirror/lib/codemirror.css" rel="stylesheet">
-<!-- angular-bootstrap-nav-tree-->
-<script src="components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
-<link href="components/angular-bootstrap-nav-tree/dist/abn_tree.css" rel="stylesheet">
+    <!-- angular-bootstrap-->
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!-- angular-ui-codemirror-->
+    <script src="bower_components/ace-builds/src-min-noconflict/ace.js"></script>
+    <script src="bower_components/angular-ui-ace/ui-ace.js"></script>
+    
+
+    <!-- angular-bootstrap-nav-tree-->
+    <script src="components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
+    <link href="components/angular-bootstrap-nav-tree/dist/abn_tree.css" rel="stylesheet">
 
 
 </head>
-<body>
-  <!-- fixed nav -->
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">气象数据共享平台</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-      </div>
+
+<body ng-controller="AbnTestController">
+    <!-- fixed nav -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">气象数据共享平台</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Dashboard</a>
+                    </li>
+                    <li><a href="#">Settings</a>
+                    </li>
+                    <li><a href="#">Profile</a>
+                    </li>
+                    <li><a href="#">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <div class="container-fluid mq-full-height"  ng-controller="AbnTestController">
-    <div class="row mq-full-height">
-      <!-- left bar tree item -->
-      <div class="col-md-3 sidebar mq-full-height">
-        <abn-tree tree-data="my_data" expand-level="1"></abn-tree>
-        <div>&nbsp;</div>
-      </div>
-      <!--main content -->
-      <div class="col-md-9 main">
-        <!-- Split button -->
-        <div class="btn-toolbar" role="toolbar">
-         <button type="button" class="btn btn-primary">展开全部</button>
-         <button type="button" class="btn btn-success">Action</button>
-         <button type="button" class="btn btn-info">Action</button>
-         <button type="button" class="btn btn-danger pull-right">执行</button>
-       </div>
-       <accordion close-others="false">
-       <accordion-group is-open="accordion_group_status.one.open">
-        <accordion-heading>
-        I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
-      </accordion-heading>
-      <textarea ui-codemirror="editorOptions" ng-model="x" style="width:100%"></textarea>
-    </accordion-group>
-    <accordion-group is-open="accordion_group_status.two.open">
-    <accordion-heading>
-    I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.two.open, 'glyphicon-chevron-right': !accordion_group_status.two.open}"></i>
-  </accordion-heading>
-  <textarea ui-codemirror="editorOptions" ng-model="x" style="width:100%"></textarea>
-</accordion-group>
-<accordion-group is-open="accordion_group_status.three.open">
-<accordion-heading>
-I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.three.open, 'glyphicon-chevron-right': !accordion_group_status.three.open}"></i>
-</accordion-heading>
-<textarea ui-codemirror="editorOptions" ng-model="x" style="width:100%"></textarea>
-</accordion-group>
-</accordion>
+    <div class="container-fluid mq-full-height" >
+        <div class="row mq-full-height">
+            <!-- left bar tree item -->
+            <div class="col-md-3 sidebar mq-full-height">
+                <!-- Split button -->
+                <div class="btn-toolbar" role="toolbar" style="margin-bottom:5px;">
+                    <button type="button" ng-click="resource_tree.expand_all()" class="btn btn-success">全部展开</button>
+                    <button type="button" ng-click="resource_tree.collapse_all()" class="btn btn-info">全部折叠</button>
+                    <button type="button" ng-click="fetch_tree()" class="btn btn-warning pull-right">刷新</button>
+                </div>
+                <abn-tree tree-data="tree_data" tree-control="resource_tree" expand-level="1" on-select="tree_handler(branch)"></abn-tree>
+                <div>&nbsp;</div>
+            </div>
+            <!--main content -->
+            <div class="col-md-9 main">
 
-</div>
-</div>
-</div>
+                <accordion close-others="false">
+                    <accordion-group is-open="accordion_group_status.one.open">
+                        <accordion-heading>
+                            {{accordion_group_status.one.heading}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
+                        </accordion-heading>
+                        <textarea class="form-control"  ng-model="resource_editor_model" rows="9"></textarea>
+                    </accordion-group>
+                    <accordion-group is-open="accordion_group_status.two.open">
+                        <accordion-heading>
+                            {{accordion_group_status.two.heading}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.two.open, 'glyphicon-chevron-right': !accordion_group_status.two.open}"></i>
+                        </accordion-heading>
+
+
+                        <form role="form">
+                            <div class="form-group">
+                                <div>
+                                    <input type="text" class="form-control" id="inputFilter" placeholder="Filter" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="inputLimit" class="control-label">Limit:</label>
+                                        <div>
+                                            <input type="text" class="form-control" id="inputLimit" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputOffset" class="control-label">Offset:</label>
+                                        <div>
+                                            <input type="text" class="form-control" id="inputOffset" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputOrderby" class="control-label">Orderby:</label>
+                                        <div>
+                                            <input type="text" class="form-control" id="inputOrderby" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-9">
+                                    <!--<label for="textareaResult" class="control-label">结果集:</label>-->
+                                    <div class="btn-toolbar" role="toolbar" style="margin-bottom:2px;">
+                                        <div class="btn-group">
+                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Left'">JSON</label>
+                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Middle'">XML</label>
+                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Right'">CSV</label>
+                                        </div>
+
+                                        <button type="button" ng-click="fetch_tree()" class="btn btn-sm btn-danger pull-right">执行</button>
+                                        <button type="button" ng-click="fetch_tree()" class="btn btn-sm btn-success pull-right">拼接</button>
+                                    </div>
+
+                                    <!--<textarea id="textareaResult"  class="form-control"  rows="8"></textarea>-->
+                                    <div class="form-control ace_editor" style="height: 180px;"  ui-ace="{theme:'twilight',mode:'xml'}"></div>
+
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div>
+                                    <input type="text" class="form-control" id="linkFilter" placeholder="拼接结果" />
+                                </div>
+                            </div>
+                        </form>
+                    </accordion-group>
+                    <accordion-group is-open="accordion_group_status.three.open">
+                        <accordion-heading>
+                            {{accordion_group_status.three.heading}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.three.open, 'glyphicon-chevron-right': !accordion_group_status.three.open}"></i>
+                        </accordion-heading>
+                        <p>hello</p>
+                    </accordion-group>
+                </accordion>
+
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
