--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!-->
 <html lang="zh-cn" ng-app="restUI" class="no-js">
 <!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,6 +35,7 @@
     <script src="components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
     <link href="components/angular-bootstrap-nav-tree/dist/abn_tree.css" rel="stylesheet">
 </head>
+
 <body ng-controller="AbnTestController">
     <!-- fixed nav -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -61,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid mq-full-height" >
+    <div class="container-fluid mq-full-height">
         <div class="row mq-full-height">
             <!-- left bar tree item -->
             <div class="col-md-3 sidebar mq-full-height">
@@ -81,7 +83,7 @@
                         <accordion-heading>
                             {{accordion_group_status.one.heading}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
                         </accordion-heading>
-                        <div class="form-control ace_editor"  ng-model="resource_editor_model" style="height: 180px;"  ui-ace="{theme:'twilight',mode:'xml'}"></div>
+                        <div class="form-control ace_editor" ng-model="resource_editor_model" style="height: 180px;" ui-ace="{theme:'twilight',mode:'xml'}"></div>
                     </accordion-group>
                     <accordion-group is-open="accordion_group_status.two.open">
                         <accordion-heading>
@@ -90,7 +92,7 @@
                         <form role="form">
                             <div class="form-group">
                                 <div>
-                                    <input type="text" class="form-control" id="inputFilter" placeholder="Filter" />
+                                    <input type="text" class="form-control" id="inputFilter" placeholder="Filter" ng-model="splice.filter" />
                                 </div>
                             </div>
                             <div class="row">
@@ -98,19 +100,19 @@
                                     <div class="form-group">
                                         <label for="inputLimit" class="control-label">Limit:</label>
                                         <div>
-                                            <input type="text" class="form-control" id="inputLimit" />
+                                            <input type="text" class="form-control" id="inputLimit" ng-model="splice.limit" />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputOffset" class="control-label">Offset:</label>
                                         <div>
-                                            <input type="text" class="form-control" id="inputOffset" />
+                                            <input type="text" class="form-control" id="inputOffset" ng-model="splice.offset" />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputOrderby" class="control-label">Orderby:</label>
                                         <div>
-                                            <input type="text" class="form-control" id="inputOrderby" />
+                                            <input type="text" class="form-control" id="inputOrderby" ng-model="splice.orderby" />
                                         </div>
                                     </div>
                                 </div>
@@ -118,20 +120,27 @@
                                     <!--<label for="textareaResult" class="control-label">结果集:</label>-->
                                     <div class="btn-toolbar" role="toolbar" style="margin-bottom:2px;">
                                         <div class="btn-group">
-                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Left'">JSON</label>
-                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Middle'">XML</label>
-                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'Right'">CSV</label>
+                                            <!--<label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'json'">JSON</label>
+                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'xml'">XML</label>
+                                            <label class="btn btn-sm btn-primary" ng-model="radioModel" btn-radio="'csv'">CSV</label>-->
+                                            <label class="btn btn-default">
+                                                <input type="radio" ng-change="change()" ng-model="radioModel" class="btn btn-default" value="json" />JSON</label>
+                                            <label class="btn btn-default">
+                                                <input type="radio" ng-change="change()" ng-model="radioModel" class="btn btn-default" value="xml" />XML</label>
+                                            <label class="btn btn-default">
+                                                <input type="radio" ng-change="change()" ng-model="radioModel" class="btn btn-default" value="csv" />CSV</label>
+                                            <div>{{radioModel}}</div>
                                         </div>
                                         <button type="button" ng-click="fetch_tree()" class="btn btn-sm btn-danger pull-right">执行</button>
-                                        <button type="button" ng-click="fetch_tree()" class="btn btn-sm btn-success pull-right">拼接</button>
+                                        <button type="button" ng-click="splice_query()" class="btn btn-sm btn-success pull-right">拼接</button>
                                     </div>
                                     <!--<textarea id="textareaResult"  class="form-control"  rows="8"></textarea>-->
-                                    <div class="form-control ace_editor" style="height: 180px;"  ui-ace="{theme:'twilight',mode:'xml'}"></div>
+                                    <div class="form-control ace_editor" style="height: 180px;" ui-ace="{theme:'twilight',mode:'xml'}"></div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div>
-                                    <input type="text" class="form-control" id="linkFilter" placeholder="拼接结果" />
+                                    <input type="text" class="form-control" id="linkFilter" placeholder="拼接结果" ng-model="splice.query" />
                                 </div>
                             </div>
                         </form>
@@ -147,4 +156,5 @@
         </div>
     </div>
 </body>
+
 </html>
