--- a/app/index.html
+++ b/app/index.html
@@ -63,11 +63,27 @@
         <div class="row mq-full-height">
             <!-- left bar tree item -->
             <div class="col-md-3 sidebar mq-full-height">
-                <!-- Split button -->
                 <div class="btn-toolbar" role="toolbar" style="margin-bottom:5px;">
                     <button type="button" ng-click="resource_tree.expand_all()" class="btn btn-success">全部展开</button>
                     <button type="button" ng-click="resource_tree.collapse_all()" class="btn btn-info">全部折叠</button>
-                    <button type="button" ng-click="fetch_tree()" class="btn btn-warning pull-right">刷新</button>
+                    <!-- Split button -->
+                    <div class="btn-group  pull-right" dropdown>
+                        <button type="button" ng-click="fetch_tree()" class="btn btn-warning">刷新列表</button>
+                        <button type="button" class="btn btn-warning dropdown-toggle">
+                            <span class="caret"></span>
+                            <span class="sr-only">Split button!</span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#" ng-click="fetch_tree()">
+                                    <span class="glyphicon glyphicon-repeat" style="margin-right: 5px;"></span>刷新列表</a>
+                            </li>
+                            <li>
+                                <a href="#" ng-click="refresh_and_clean()">
+                                    <span class="glyphicon glyphicon-refresh" style="margin-right: 5px;"></span>刷新并清空</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <abn-tree tree-data="tree_data" tree-control="resource_tree" expand-level="1" on-select="tree_handler(branch)"></abn-tree>
                 <div>&nbsp;</div>
@@ -79,6 +95,13 @@
                         <accordion-heading>
                             {{accordion_group_status.one.heading}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.one.open, 'glyphicon-chevron-right': !accordion_group_status.one.open}"></i>
                         </accordion-heading>
+                        <div>
+                            <span class="glyphicon glyphicon-paperclip">{{resource_id}}</span>
+                            <a href="rest/res/metadata/{{resource_id}}" target="_blank" class="pull-right" style="margin-right: 5px;">
+                                <span class="glyphicon glyphicon-link" style="margin-right: 5px;"></span>元数据</a>
+                            <a href="#" ng-click="reload_item()" class="pull-right" style="margin-right: 10px;">
+                                <span class="glyphicon glyphicon-retweet" style="margin-right: 5px;"></span>重载</a>
+                        </div>
                         <div class="form-control ace_editor" style="height:180px;font-size:14px;" ng-model="resource_editor_model" ui-ace="resourceOptions" readonly="true"></div>
                     </accordion-group>
                     <accordion-group is-open="accordion_group_status.two.open">
@@ -113,18 +136,21 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-9">
-                                    <!--<label for="textareaResult" class="control-label">结果集:</label>-->
                                     <div class="btn-toolbar" role="toolbar" style="margin-bottom:2px;">
                                         <div class="btn-group">
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioModel)" ng-model="radioModel" btn-radio="'json'">JSON</label>
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioModel)" ng-model="radioModel" btn-radio="'xml'">XML</label>
-                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioModel)" ng-model="radioModel" btn-radio="'csv'">CSV</label>
+                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'json'">JSON</label>
+                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'xml'">XML</label>
+                                            <label class="btn btn-sm btn-primary" ng-change="output_change(radioOutputModel)" ng-model="radioOutputModel" btn-radio="'csv'">CSV</label>
+                                        </div>
+                                        <div class="btn-group">
+                                            <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'format'">格式化</label>
+                                            <label class="btn btn-sm btn-success" ng-change="format_change(radioFormatModel)" ng-model="radioFormatModel" btn-radio="'default'">默认值</label>
                                         </div>
                                         <button type="button" ng-click="query()" class="btn btn-sm btn-danger pull-right">执行</button>
-                                        <button type="button" ng-click="splice_query()" class="btn btn-sm btn-success pull-right">拼接</button>
+                                        <button type="button" ng-click="splice_query()" class="btn btn-sm btn-info pull-right">拼接</button>
                                     </div>
                                     <!--<textarea id="textareaResult"  class="form-control"  rows="8"></textarea>-->
-                                    <div class="form-control ace_editor" style="height: 180px;font-size:14px;"  ui-ace="resultOptions"></div>
+                                    <div class="form-control ace_editor" style="height: 180px;font-size:14px;" ui-ace="resultOptions"></div>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -138,7 +164,7 @@
                         <accordion-heading>
                             {{accordion_group_status.three.heading}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':accordion_group_status.three.open, 'glyphicon-chevron-right': !accordion_group_status.three.open}"></i>
                         </accordion-heading>
-                        <p>hello</p>
+                        <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</alert>
                     </accordion-group>
                 </accordion>
             </div>
