--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://10.151.96.18:3131" target="_blank">编辑</a>
                     </li>
-                    <li><a href="doc/README.html" target="_blank">帮助</a>
+                    <li><a href="doc/readme.htm" target="_blank">帮助</a>
                     </li>
                 </ul>
             </div>
