--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="druid/sql.html" target="_blank">监控</a>
+                    </li>
                     <li><a href="http://10.151.96.18:3131" target="_blank">编辑</a>
                     </li>
                     <li><a href="doc/readme.htm" target="_blank">帮助</a>
