--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,8 @@
                         <div class="col-md-6">
                             <div style="margin-top: 11px;margin-bottom: 2px;">
                                 <span class="glyphicon glyphicon-paperclip">{{resource_id}}</span>
+                                <a href="#" ng-click="load_sql()" class="pull-right" style="margin-right: 5px;">
+                                    <span class="glyphicon glyphicon-usd" style="margin-right: 5px;"></span>SQL语句</a>
                                 <a href="rest/res/metadata/{{resource_id}}" target="_blank" class="pull-right" style="margin-right: 5px;">
                                     <span class="glyphicon glyphicon-link" style="margin-right: 5px;"></span>元数据</a>
                                 <a href="#" ng-click="reload_item()" class="pull-right" style="margin-right: 10px;">
